localization files updates

--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -718,7 +718,7 @@
     <value>Geändert am</value>
   </data>
   <data name="ButtonApprove" xml:space="preserve">
-    <value>Approve</value>
+    <value>Bestätigen</value>
   </data>
   <data name="ButtonBook" xml:space="preserve">
     <value>Bestellen</value>
@@ -733,49 +733,49 @@
     <value>Absenden</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>Beenden</value>
   </data>
   <data name="CaseInsertCloseMsg" xml:space="preserve">
-    <value>The case insert operation has been cancelled!</value>
+    <value>Die Operation Fall einfügen wurde abgebrochen!</value>
   </data>
   <data name="CaseInsertContactMsg" xml:space="preserve">
-    <value>The Contact doesn't exist in the DB!</value>
+    <value>Der Kontakt existiert nicht in der DB!</value>
   </data>
   <data name="CaseInsertFileMsg" xml:space="preserve">
-    <value>Cannot save the uploaded file!</value>
+    <value>Die hochgeladene Datei kann nicht gespeichert werden!</value>
   </data>
   <data name="CaseInsertSaveMsg" xml:space="preserve">
-    <value>The new case has been saved correctly!</value>
+    <value>Der neue Fall wurde korrekt gespeichert!</value>
   </data>
   <data name="CaseInsertWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case!</value>
+    <value>Etwas ist schiefgelaufen. Der Fall kann nicht gespeichert werden!</value>
   </data>
   <data name="CaseDelFileMsg" xml:space="preserve">
-    <value>The file has been deleted correctly!</value>
+    <value>Die Datei wurde ordnungsgemäß gelöscht!</value>
   </data>
   <data name="CaseModifyCCEngMsg" xml:space="preserve">
-    <value>The CC Engineer doesn't exist in the DB!</value>
+    <value>Der CC Engineer existiert nicht in der DB!</value>
   </data>
   <data name="CaseModifyCloseMsg" xml:space="preserve">
-    <value>The case modify operation has been cancelled!</value>
+    <value>Der Fallbearbeitungsvorgang wurde abgebrochen!</value>
   </data>
   <data name="CaseModifySaveMsg" xml:space="preserve">
-    <value>The case has been modified correctly!</value>
+    <value>Der Fall wurde korrekt geändert.</value>
   </data>
   <data name="CaseUpdateCloseMsg" xml:space="preserve">
-    <value>The case update operation has been cancelled!</value>
+    <value>Der Fallaktualisierungsvorgang wurde abgebrochen!</value>
   </data>
   <data name="CaseUpdateSaveMsg" xml:space="preserve">
-    <value>The new history case has been saved correctly!</value>
+    <value>Der neue Fall wurde korrekt gespeichert!</value>
   </data>
   <data name="CaseUpdateWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case history!</value>
+    <value>Etwas ist schiefgelaufen. Der Fallverlauf kann nicht gespeichert werden!</value>
   </data>
   <data name="Fax" xml:space="preserve">
     <value>Fax</value>
   </data>
   <data name="Industry" xml:space="preserve">
-    <value>Industry</value>
+    <value>Branche</value>
   </data>
   <data name="Phone1" xml:space="preserve">
     <value>Telefon 1</value>
@@ -784,10 +784,10 @@
     <value>Telefon 2</value>
   </data>
   <data name="Production" xml:space="preserve">
-    <value>Production</value>
+    <value>Erzeugnisse</value>
   </data>
   <data name="Segment" xml:space="preserve">
-    <value>Segment</value>
+    <value>Bereich</value>
   </data>
   <data name="Website" xml:space="preserve">
     <value>Webseite</value>
@@ -835,7 +835,7 @@
     <value>Bestellt</value>
   </data>
   <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
+    <value>Bestell-Nr.</value>
   </data>
   <data name="Total" xml:space="preserve">
     <value>Gesamt</value>
