--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -667,7 +667,7 @@
     <value>Contact</value>
   </data>
   <data name="CreatedBy" xml:space="preserve">
-    <value>Created By</value>
+    <value>Créé par</value>
   </data>
   <data name="CreatedOn" xml:space="preserve">
     <value>Créé le</value>
@@ -721,19 +721,19 @@
     <value>Approuvé</value>
   </data>
   <data name="ButtonBook" xml:space="preserve">
-    <value>Book</value>
+    <value>Commandé</value>
   </data>
   <data name="ButtonCheck" xml:space="preserve">
-    <value>Check</value>
+    <value>Vérifié</value>
   </data>
   <data name="ButtonReject" xml:space="preserve">
-    <value>Reject</value>
+    <value>Refusé</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>Soumettre</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>Fermé</value>
   </data>
   <data name="CaseInsertCloseMsg" xml:space="preserve">
     <value>The case insert operation has been cancelled!</value>
@@ -775,22 +775,22 @@
     <value>Fax</value>
   </data>
   <data name="Industry" xml:space="preserve">
-    <value>Industry</value>
+    <value>Industrie</value>
   </data>
   <data name="Phone1" xml:space="preserve">
-    <value>Phone 1</value>
+    <value>Tel. 1</value>
   </data>
   <data name="Phone2" xml:space="preserve">
-    <value>Phone 2</value>
+    <value>Tel. 2</value>
   </data>
   <data name="Production" xml:space="preserve">
-    <value>Production</value>
+    <value>Produit client</value>
   </data>
   <data name="Segment" xml:space="preserve">
-    <value>Segment</value>
+    <value>Secteur</value>
   </data>
   <data name="Website" xml:space="preserve">
-    <value>Website</value>
+    <value>Site Web</value>
   </data>
   <data name="Action" xml:space="preserve">
     <value>Action</value>
@@ -823,19 +823,19 @@
     <value>ID Utilisateur</value>
   </data>
   <data name="CaseArchive" xml:space="preserve">
-    <value>Case Archive</value>
+    <value>Archivé</value>
   </data>
   <data name="Discount" xml:space="preserve">
-    <value>Discount</value>
+    <value>Remise</value>
   </data>
   <data name="Item" xml:space="preserve">
     <value>Item</value>
   </data>
   <data name="Ordered" xml:space="preserve">
-    <value>Ordered</value>
+    <value>Commandé</value>
   </data>
   <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
+    <value>N° commande</value>
   </data>
   <data name="Total" xml:space="preserve">
     <value>Total</value>
