--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -754,7 +754,7 @@
     <value>Il file è stato cancellato correttamente!</value>
   </data>
   <data name="CaseModifyCCEngMsg" xml:space="preserve">
-    <value>Il CC Engineer non esiste!</value>
+    <value>L'operatore del Customer Care selezionato non esiste!</value>
   </data>
   <data name="CaseModifyCloseMsg" xml:space="preserve">
     <value>La modifica del caso è stata annullata!</value>
