--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -625,16 +625,16 @@
     <value>状態</value>
   </data>
   <data name="Address" xml:space="preserve">
-    <value>住所：</value>
+    <value>住所</value>
   </data>
   <data name="City" xml:space="preserve">
-    <value>市区町村：</value>
+    <value>市区町村</value>
   </data>
   <data name="Country" xml:space="preserve">
-    <value>国：</value>
+    <value>国</value>
   </data>
   <data name="Email" xml:space="preserve">
-    <value>メールアドレス：</value>
+    <value>メールアドレス</value>
   </data>
   <data name="ExportingLicense" xml:space="preserve">
     <value>次のライセンスをエクスポートします。</value>
@@ -649,10 +649,10 @@
     <value>次のライセンスを取得します。</value>
   </data>
   <data name="Province" xml:space="preserve">
-    <value>県：</value>
+    <value>県</value>
   </data>
   <data name="ZIP" xml:space="preserve">
-    <value>郵便番号：</value>
+    <value>郵便番号</value>
   </data>
   <data name="AssignedTo" xml:space="preserve">
     <value>担当者</value>
@@ -718,79 +718,79 @@
     <value>修正日</value>
   </data>
   <data name="ButtonApprove" xml:space="preserve">
-    <value>Approve</value>
+    <value>承認</value>
   </data>
   <data name="ButtonBook" xml:space="preserve">
-    <value>Book</value>
+    <value>登録</value>
   </data>
   <data name="ButtonCheck" xml:space="preserve">
-    <value>Check</value>
+    <value>確認</value>
   </data>
   <data name="ButtonReject" xml:space="preserve">
-    <value>Reject</value>
+    <value>否認</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>送信</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>閉じる</value>
   </data>
   <data name="CaseInsertCloseMsg" xml:space="preserve">
-    <value>The case insert operation has been cancelled!</value>
+    <value>お問い合わせの作成はキャンセルされました！</value>
   </data>
   <data name="CaseInsertContactMsg" xml:space="preserve">
-    <value>The Contact doesn't exist in the DB!</value>
+    <value>その担当者は存在しません！</value>
   </data>
   <data name="CaseInsertFileMsg" xml:space="preserve">
-    <value>Cannot save the uploaded file!</value>
+    <value>ファイルをアップロードすることができませんでした！</value>
   </data>
   <data name="CaseInsertSaveMsg" xml:space="preserve">
-    <value>The new case has been saved correctly!</value>
+    <value>新しいお問い合わせが作成されました！</value>
   </data>
   <data name="CaseInsertWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case!</value>
+    <value>問題が発生しました。お問い合わせを作成することはできません。</value>
   </data>
   <data name="CaseDelFileMsg" xml:space="preserve">
-    <value>The file has been deleted correctly!</value>
+    <value>ファイルは削除されました！</value>
   </data>
   <data name="CaseModifyCCEngMsg" xml:space="preserve">
-    <value>The CC Engineer doesn't exist in the DB!</value>
+    <value>その CC エンジニアは存在しません！</value>
   </data>
   <data name="CaseModifyCloseMsg" xml:space="preserve">
-    <value>The case modify operation has been cancelled!</value>
+    <value>お問い合わせの修正はキャンセルされました！</value>
   </data>
   <data name="CaseModifySaveMsg" xml:space="preserve">
-    <value>The case has been modified correctly!</value>
+    <value>お問い合わせは修正されました！</value>
   </data>
   <data name="CaseUpdateCloseMsg" xml:space="preserve">
-    <value>The case update operation has been cancelled!</value>
+    <value>お問い合わせの更新はキャンセルされました！</value>
   </data>
   <data name="CaseUpdateSaveMsg" xml:space="preserve">
-    <value>The new history case has been saved correctly!</value>
+    <value>お問い合わせの履歴を更新しました！</value>
   </data>
   <data name="CaseUpdateWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case history!</value>
+    <value>問題が発生しました。お問い合わせの履歴を更新することはできません。</value>
   </data>
   <data name="Fax" xml:space="preserve">
-    <value>Fax</value>
+    <value>FAX</value>
   </data>
   <data name="Industry" xml:space="preserve">
-    <value>Industry</value>
+    <value>産業分野</value>
   </data>
   <data name="Phone1" xml:space="preserve">
-    <value>Phone 1</value>
+    <value>電話番号１</value>
   </data>
   <data name="Phone2" xml:space="preserve">
-    <value>Phone 2</value>
+    <value>電話番号２</value>
   </data>
   <data name="Production" xml:space="preserve">
-    <value>Production</value>
+    <value>製品</value>
   </data>
   <data name="Segment" xml:space="preserve">
-    <value>Segment</value>
+    <value>セグメント</value>
   </data>
   <data name="Website" xml:space="preserve">
-    <value>Website</value>
+    <value>Web サイト</value>
   </data>
   <data name="Action" xml:space="preserve">
     <value>アクション</value>
@@ -823,21 +823,21 @@
     <value>ユーザーID</value>
   </data>
   <data name="CaseArchive" xml:space="preserve">
-    <value>Case Archive</value>
+    <value>問合せアーカイブ</value>
   </data>
   <data name="Discount" xml:space="preserve">
-    <value>Discount</value>
+    <value>ディスカウント</value>
   </data>
   <data name="Item" xml:space="preserve">
-    <value>Item</value>
+    <value>項目</value>
   </data>
   <data name="Ordered" xml:space="preserve">
-    <value>Ordered</value>
+    <value>オーダー</value>
   </data>
   <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
+    <value>オーダー番号</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Total</value>
+    <value>合計</value>
   </data>
 </root>
