--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -625,16 +625,16 @@
     <value>상태</value>
   </data>
   <data name="Address" xml:space="preserve">
-    <value>주소:</value>
+    <value>주소</value>
   </data>
   <data name="City" xml:space="preserve">
-    <value>도시:</value>
+    <value>도시</value>
   </data>
   <data name="Country" xml:space="preserve">
-    <value>국가:</value>
+    <value>국가</value>
   </data>
   <data name="Email" xml:space="preserve">
-    <value>이메일：</value>
+    <value>이메일</value>
   </data>
   <data name="ExportingLicense" xml:space="preserve">
     <value>다음의 라이선스를 내보냅니다.</value>
@@ -649,10 +649,10 @@
     <value>이 라이선스를 설치하고 있습니다.</value>
   </data>
   <data name="Province" xml:space="preserve">
-    <value>지역:</value>
+    <value>지역</value>
   </data>
   <data name="ZIP" xml:space="preserve">
-    <value>우편번호:</value>
+    <value>우편번호</value>
   </data>
   <data name="AssignedTo" xml:space="preserve">
     <value>할당대상</value>
@@ -715,85 +715,85 @@
     <value>버전변경</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
-    <value>Modified On</value>
+    <value>에 수정됨</value>
   </data>
   <data name="ButtonApprove" xml:space="preserve">
-    <value>Approve</value>
+    <value>승인</value>
   </data>
   <data name="ButtonBook" xml:space="preserve">
-    <value>Book</value>
+    <value>등록</value>
   </data>
   <data name="ButtonCheck" xml:space="preserve">
-    <value>Check</value>
+    <value>확인</value>
   </data>
   <data name="ButtonReject" xml:space="preserve">
-    <value>Reject</value>
+    <value>거부</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>제출</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Close</value>
+    <value>닫기</value>
   </data>
   <data name="CaseInsertCloseMsg" xml:space="preserve">
-    <value>The case insert operation has been cancelled!</value>
+    <value>문의사항 작성이 취소되었습니다!</value>
   </data>
   <data name="CaseInsertContactMsg" xml:space="preserve">
-    <value>The Contact doesn't exist in the DB!</value>
+    <value>연락처가 DB에 존재하지 않습니다!</value>
   </data>
   <data name="CaseInsertFileMsg" xml:space="preserve">
-    <value>Cannot save the uploaded file!</value>
+    <value>업로드한 파일을 저장할 수 없습니다!</value>
   </data>
   <data name="CaseInsertSaveMsg" xml:space="preserve">
-    <value>The new case has been saved correctly!</value>
+    <value>새로운 문의사항이 저장되었습니다!</value>
   </data>
   <data name="CaseInsertWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case!</value>
+    <value>오류가 발생했습니다. 문의사항을 저장할 수 없습니다!</value>
   </data>
   <data name="CaseDelFileMsg" xml:space="preserve">
-    <value>The file has been deleted correctly!</value>
+    <value>파일이 삭제되었습니다!</value>
   </data>
   <data name="CaseModifyCCEngMsg" xml:space="preserve">
-    <value>The CC Engineer doesn't exist in the DB!</value>
+    <value>CC 엔지니어가 DB가 존재하지 않습니다!</value>
   </data>
   <data name="CaseModifyCloseMsg" xml:space="preserve">
-    <value>The case modify operation has been canceled!</value>
+    <value>문의사항 수정이 취소되었습니다!</value>
   </data>
   <data name="CaseModifySaveMsg" xml:space="preserve">
-    <value>The case has been modified correctly!</value>
+    <value>문의사항이 수정되었습니다!</value>
   </data>
   <data name="CaseUpdateCloseMsg" xml:space="preserve">
-    <value>The case update operation has been cancelled!</value>
+    <value>문의사항이 업데이트가 취소되었습니다!</value>
   </data>
   <data name="CaseUpdateSaveMsg" xml:space="preserve">
-    <value>The new history case has been saved correctly!</value>
+    <value>문의사항 이력을 업데이트했습니다!</value>
   </data>
   <data name="CaseUpdateWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case history!</value>
+    <value>오류가 발생했습니다. 문의사항 이력을 저장할 수 없습니다!</value>
   </data>
   <data name="Fax" xml:space="preserve">
-    <value>Fax</value>
+    <value>팩스</value>
   </data>
   <data name="Industry" xml:space="preserve">
-    <value>Industry</value>
+    <value>산업분야</value>
   </data>
   <data name="Phone1" xml:space="preserve">
-    <value>Phone 1</value>
+    <value>전화번호1</value>
   </data>
   <data name="Phone2" xml:space="preserve">
-    <value>Phone 2</value>
+    <value>전화번호2</value>
   </data>
   <data name="Production" xml:space="preserve">
-    <value>Production</value>
+    <value>제품</value>
   </data>
   <data name="Segment" xml:space="preserve">
-    <value>Segment</value>
+    <value>부서</value>
   </data>
   <data name="Website" xml:space="preserve">
-    <value>Website</value>
+    <value>웹사이트</value>
   </data>
   <data name="Action" xml:space="preserve">
-    <value>Action</value>
+    <value>작업</value>
   </data>
   <data name="Ancestor" xml:space="preserve">
     <value>원조</value>
@@ -802,42 +802,42 @@
     <value>종료일</value>
   </data>
   <data name="ExportedNum" xml:space="preserve">
-    <value>Exported Num</value>
+    <value>납품 번호</value>
   </data>
   <data name="MaintStartDate" xml:space="preserve">
     <value>유지보수 시작일</value>
   </data>
   <data name="MaxExport" xml:space="preserve">
-    <value>Max Export</value>
+    <value>최대 납품수</value>
   </data>
   <data name="Note" xml:space="preserve">
     <value>참고</value>
   </data>
   <data name="OriginalProduct" xml:space="preserve">
-    <value>Legacy Product</value>
+    <value>구제품</value>
   </data>
   <data name="StartDate" xml:space="preserve">
     <value>시작일</value>
   </data>
   <data name="UserId" xml:space="preserve">
-    <value>UserId</value>
+    <value>사용자ID</value>
   </data>
   <data name="CaseArchive" xml:space="preserve">
-    <value>Case Archive</value>
+    <value>문의사항 보관</value>
   </data>
   <data name="Discount" xml:space="preserve">
-    <value>Discount</value>
+    <value>할인</value>
   </data>
   <data name="Item" xml:space="preserve">
-    <value>Item</value>
+    <value>항목</value>
   </data>
   <data name="Ordered" xml:space="preserve">
-    <value>Ordered</value>
+    <value>주문</value>
   </data>
   <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
+    <value>주문번호</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Total</value>
+    <value>합계</value>
   </data>
 </root>
