--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -772,72 +772,72 @@
     <value>Something went wrong. Cannot save the case history!</value>
   </data>
   <data name="Fax" xml:space="preserve">
-    <value>Fax</value>
+    <value>传真</value>
   </data>
   <data name="Industry" xml:space="preserve">
-    <value>Industry</value>
+    <value>行业</value>
   </data>
   <data name="Phone1" xml:space="preserve">
-    <value>Phone 1</value>
+    <value>电话</value>
   </data>
   <data name="Phone2" xml:space="preserve">
-    <value>Phone 2</value>
+    <value>手机</value>
   </data>
   <data name="Production" xml:space="preserve">
-    <value>Production</value>
+    <value>产品</value>
   </data>
   <data name="Segment" xml:space="preserve">
-    <value>Segment</value>
+    <value>部分</value>
   </data>
   <data name="Website" xml:space="preserve">
-    <value>Website</value>
+    <value>网站</value>
   </data>
   <data name="Action" xml:space="preserve">
-    <value>Action</value>
+    <value>备注</value>
   </data>
   <data name="Ancestor" xml:space="preserve">
-    <value>Ancestor</value>
+    <value>来源</value>
   </data>
   <data name="EndDate" xml:space="preserve">
-    <value>End Date</value>
+    <value>截止日期</value>
   </data>
   <data name="ExportedNum" xml:space="preserve">
-    <value>Exported Num</value>
+    <value>导出数量</value>
   </data>
   <data name="MaintStartDate" xml:space="preserve">
-    <value>Maint Start Date</value>
+    <value>维护开始日</value>
   </data>
   <data name="MaxExport" xml:space="preserve">
-    <value>Max Export</value>
+    <value>最大导出</value>
   </data>
   <data name="Note" xml:space="preserve">
-    <value>Note</value>
+    <value>注</value>
   </data>
   <data name="OriginalProduct" xml:space="preserve">
-    <value>Legacy Product</value>
+    <value>旧产品</value>
   </data>
   <data name="StartDate" xml:space="preserve">
-    <value>Start Date</value>
+    <value>起始日期</value>
   </data>
   <data name="UserId" xml:space="preserve">
-    <value>UserId</value>
+    <value>用户ID</value>
   </data>
   <data name="CaseArchive" xml:space="preserve">
-    <value>Case Archive</value>
+    <value>案例目的</value>
   </data>
   <data name="Discount" xml:space="preserve">
-    <value>Discount</value>
+    <value>折扣</value>
   </data>
   <data name="Item" xml:space="preserve">
-    <value>Item</value>
+    <value>品目</value>
   </data>
   <data name="Ordered" xml:space="preserve">
-    <value>Ordered</value>
+    <value>下单</value>
   </data>
   <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
+    <value>订单号</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Total</value>
+    <value>总共</value>
   </data>
 </root>
