added some new localizations

--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -736,40 +736,40 @@
     <value>Fermé</value>
   </data>
   <data name="CaseInsertCloseMsg" xml:space="preserve">
-    <value>The case insert operation has been cancelled!</value>
+    <value>L'opération de création du cas a été annulée !</value>
   </data>
   <data name="CaseInsertContactMsg" xml:space="preserve">
-    <value>The Contact doesn't exist in the DB!</value>
+    <value>Le contact n'existe pas dans la DB !</value>
   </data>
   <data name="CaseInsertFileMsg" xml:space="preserve">
-    <value>Cannot save the uploaded file!</value>
+    <value>Le fichier téléchargé ne peut être sauvegardé !</value>
   </data>
   <data name="CaseInsertSaveMsg" xml:space="preserve">
-    <value>The new case has been saved correctly!</value>
+    <value>Le nouveau cas a été correctement sauvegardé !</value>
   </data>
   <data name="CaseInsertWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case!</value>
+    <value>Il y a eu un problème. Le cas n'a pu être sauvegardé !</value>
   </data>
   <data name="CaseDelFileMsg" xml:space="preserve">
-    <value>The file has deleted correctly!</value>
+    <value>Le fichier a été correctement effacé !</value>
   </data>
   <data name="CaseModifyCCEngMsg" xml:space="preserve">
-    <value>The CC Engineer doesn't exist in the DB!</value>
+    <value>Le technicien du CC n'existe pas dans la base !</value>
   </data>
   <data name="CaseModifyCloseMsg" xml:space="preserve">
-    <value>The case modify operation has been cancelled!</value>
+    <value>L'opération de modification du cas a été interrompue !</value>
   </data>
   <data name="CaseModifySaveMsg" xml:space="preserve">
-    <value>The case has been modified correctly!</value>
+    <value>Le cas a été modifié correctement !</value>
   </data>
   <data name="CaseUpdateCloseMsg" xml:space="preserve">
-    <value>The case update operation has been cancelled!</value>
+    <value>L'opération de mise à jour du cas a été interrompue !</value>
   </data>
   <data name="CaseUpdateSaveMsg" xml:space="preserve">
-    <value>The new history case has been saved correctly!</value>
+    <value>Le nouvel historique du cas a été correctement sauvegardé !</value>
   </data>
   <data name="CaseUpdateWrongMsg" xml:space="preserve">
-    <value>Something went wrong. Cannot save the case history!</value>
+    <value>Il y a eu un problème. L'historique du cas n'a pu être sauvegardé !</value>
   </data>
   <data name="Fax" xml:space="preserve">
     <value>Fax</value>
@@ -829,7 +829,7 @@
     <value>Remise</value>
   </data>
   <data name="Item" xml:space="preserve">
-    <value>Item</value>
+    <value>Article</value>
   </data>
   <data name="Ordered" xml:space="preserve">
     <value>Commandé</value>
@@ -839,5 +839,26 @@
   </data>
   <data name="Total" xml:space="preserve">
     <value>Total</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="File" xml:space="preserve">
+    <value>File</value>
+  </data>
+  <data name="LicenseCreateMsg" xml:space="preserve">
+    <value>You have generated your license.</value>
+  </data>
+  <data name="LicenseExportMsg" xml:space="preserve">
+    <value>You have exported your license.</value>
+  </data>
+  <data name="LicenseMailMsg" xml:space="preserve">
+    <value>You are going to receive the .v2c file to install at your company email address</value>
+  </data>
+  <data name="LicenseValidateMsg1" xml:space="preserve">
+    <value>You have correctly exported your license.</value>
+  </data>
+  <data name="LicenseValidateMsg2" xml:space="preserve">
+    <value>Now you can install the license in another pc.</value>
   </data>
 </root>
