--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -840,4 +840,25 @@
   <data name="Total" xml:space="preserve">
     <value>Totale</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Rimuovi</value>
+  </data>
+  <data name="File" xml:space="preserve">
+    <value>File</value>
+  </data>
+  <data name="LicenseCreateMsg" xml:space="preserve">
+    <value>Ha generato la sua licenza.</value>
+  </data>
+  <data name="LicenseExportMsg" xml:space="preserve">
+    <value>Ha esportato la sua licenza.</value>
+  </data>
+  <data name="LicenseMailMsg" xml:space="preserve">
+    <value>Al seguente indirizzo e-mail (dell'azienda) riceverá il file .v2c da installare</value>
+  </data>
+  <data name="LicenseValidateMsg1" xml:space="preserve">
+    <value>Ha esportato correttamente la licenza.</value>
+  </data>
+  <data name="LicenseValidateMsg2" xml:space="preserve">
+    <value>Ora é possibile installare la licenza su un altro pc.</value>
+  </data>
 </root>
