--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -840,4 +840,25 @@
   <data name="Total" xml:space="preserve">
     <value>合計</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="File" xml:space="preserve">
+    <value>File</value>
+  </data>
+  <data name="LicenseCreateMsg" xml:space="preserve">
+    <value>You have generated your license.</value>
+  </data>
+  <data name="LicenseExportMsg" xml:space="preserve">
+    <value>You have exported your license.</value>
+  </data>
+  <data name="LicenseMailMsg" xml:space="preserve">
+    <value>You are going to receive the .v2c file to install at your company email address</value>
+  </data>
+  <data name="LicenseValidateMsg1" xml:space="preserve">
+    <value>You have correctly exported your license.</value>
+  </data>
+  <data name="LicenseValidateMsg2" xml:space="preserve">
+    <value>Now you can install the license in another pc.</value>
+  </data>
 </root>
