--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -861,4 +861,52 @@
   <data name="LicenseValidateMsg2" xml:space="preserve">
     <value>Now you can install the license in another pc.</value>
   </data>
+  <data name="AccountMail" xml:space="preserve">
+    <value>Your account email</value>
+  </data>
+  <data name="CheckMailMsg" xml:space="preserve">
+    <value>Check the email you have provided</value>
+  </data>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>if you forgot password</value>
+  </data>
+  <data name="MailErrMsg" xml:space="preserve">
+    <value>Not a valid email--what are you trying to do here?</value>
+  </data>
+  <data name="Message1" xml:space="preserve">
+    <value>The request was sent to our servers, please check your email box.</value>
+  </data>
+  <data name="Message2" xml:space="preserve">
+    <value>You will receive instructions to reset your password shortly</value>
+  </data>
+  <data name="ResetPasswordMsg" xml:space="preserve">
+    <value>We need your email to send you a reset link!</value>
+  </data>
+  <data name="TitleMsg" xml:space="preserve">
+    <value>Email correctly sent</value>
+  </data>
+  <data name="Description2016TDViewerLightSP1" xml:space="preserve">
+    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+  </data>
+  <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>TD 2016 SP1 legacy version for old systems.</value>
+  </data>
+  <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+  </data>
+  <data name="Description2016thinkPLMSP1" xml:space="preserve">
+    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+  </data>
+  <data name="Product2016TDViewerLightSP1" xml:space="preserve">
+    <value>TDViewerLight 2016 SP1</value>
+  </data>
+  <data name="Product2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit SP1</value>
+  </data>
+  <data name="Product2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit SP1</value>
+  </data>
+  <data name="Product2016thinkPLMSP1" xml:space="preserve">
+    <value>thinkPLM 2016 SP1</value>
+  </data>
 </root>
