--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -211,10 +211,10 @@
     <value>TD 2016 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Versione raccomandata. Release ufficiale di ThinkDesign 2016.</value>
+    <value>Questo self-extract permette di installare ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Questa sezione include la versione ufficiale di thinkPLM 2016.</value>
+    <value>Questo self-extract permette di installare thinkPLM 2016. </value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -595,7 +595,7 @@
     <value>Scarica la nuova release ufficiale!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
     <value>Questo self-extract permette di installare l'applicazione TDViewerLight 2016.</value>
@@ -886,16 +886,16 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>Questo self-extract permette di installare l'applicazione TDViewerLight 2016 SP1.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
-    <value>TD 2016 SP1 legacy version for old systems.</value>
+    <value>TD 2016 SP1 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+    <value>Versione raccomandata. Release ufficiale del SP1 di ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+    <value>Questa sezione include la versione ufficiale di thinkPLM 2016 SP1.</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
@@ -908,5 +908,17 @@
   </data>
   <data name="Product2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1</value>
+  </data>
+  <data name="Download2016TDViewerLightSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_64bit_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016thinkPLMSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
   </data>
 </root>
