--- a/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
+++ b/DPTnew/DPTnew/Localization/Resource.zh-CN.resx
@@ -595,7 +595,7 @@
     <value>官方版下载！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
     <value>本压缩文件为TDViewerLight 2016安装包。</value>
@@ -908,5 +908,17 @@
   </data>
   <data name="Product2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1</value>
+  </data>
+  <data name="Download2016TDViewerLightSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_64bit_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016thinkPLMSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
   </data>
 </root>
