--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -909,4 +909,16 @@
   <data name="Product2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1</value>
   </data>
+  <data name="Download2016TDViewerLightSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_64bit_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016thinkPLMSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
+  </data>
 </root>
