--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -595,7 +595,7 @@
     <value>公式版のダウンロードが可能です！</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
     <value>この自己解凍ファイルは ThinkDesign Viewer 2016 をインストールします。</value>
@@ -886,13 +886,13 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2016 SP1 をインストールします。</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+    <value>thinkPLM 2016 SP1 公式版。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
     <value>This section includes thinkPLM 2016 SP1 official version.</value>
@@ -908,5 +908,17 @@
   </data>
   <data name="Product2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1</value>
+  </data>
+  <data name="Download2016TDViewerLightSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.t3-japan.co.jp/t3software/2016.1build21116/dvd_td_64bit_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016thinkPLMSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
   </data>
 </root>
