--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -595,7 +595,7 @@
     <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
     <value>이 자동 압축 풀림 파일은 TDViewerLight 2016 프로그램을 설치합니다.</value>
@@ -908,5 +908,17 @@
   </data>
   <data name="Product2016thinkPLMSP1" xml:space="preserve">
     <value>thinkPLM 2016 SP1</value>
+  </data>
+  <data name="Download2016TDViewerLightSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitSP1" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.t3-japan.co.jp/t3software/2016.1build21116/dvd_td_64bit_2016T1_b21116.iso</value>
+  </data>
+  <data name="Download2016thinkPLMSP1" xml:space="preserve">
+    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
   </data>
 </root>
