updated localization resources

--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -316,10 +316,10 @@
     <value>TD 2016 für 32bit-Systeme.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Empfohlene Version. Offizielles Release ThinkDesign 2016.</value>
+    <value>Diese selbstextrahierende Datei installiert ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Offizielle Version thinkPLM 2016.</value>
+    <value>thinkPLM Version 2016.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -595,7 +595,7 @@
     <value>Downloaden Sie hier das offizielle Release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+    <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
     <value>Diese selbstextrahierende Datei installiert den TDViewerLight Version 2016.</value>
@@ -886,16 +886,16 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>Diese selbstextrahierende Datei installiert den TDViewerLight Version 2016 SP1.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
-    <value>TD 2016 SP1 legacy version for old systems.</value>
+    <value>TD 2016 SP1 für 32bit-Systeme.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+    <value>Empfohlene Version. Offizielles Release ThinkDesign 2016 SP1.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+    <value>Offizielle Version thinkPLM 2016 SP1.</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
