--- a/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.fr-FR.resx
@@ -316,10 +316,10 @@
     <value>Version TD2016 pour anciens sytèmes.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Version recommandée. Version ThinkDesign 2016 officielle.</value>
+    <value>Ce fichier auto extractible installera la version ThinkDesign suite 2016 64bits.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Cette partie inclus thinkPLM 2016 version officielle.</value>
+    <value>Cette partie inclus thinkPLM 2016.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 application.</value>
+    <value>Ce fichier auto extractible installera l'application TDViewerLight 2016.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Programme d'installation des licences flottantes, utilitaires et ajouts pour la version 2016.</value>
@@ -886,16 +886,16 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>Ce fichier auto extractible installera l'application TDViewerLight 2016 SP1.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
-    <value>TD 2016 SP1 legacy version for old systems.</value>
+    <value>TD 2016 SP1 pour anciens sytèmes.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016 SP1.</value>
+    <value>Version recommandée. Version ThinkDesign 2016 SP1 officielle.</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+    <value>Cette partie inclus thinkPLM 2016 SP1 version officielle.</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
