--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -211,10 +211,10 @@
     <value>TD 2016 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Questo self-extract permette di installare ThinkDesign 2016.</value>
+    <value>Questo  file .iso permette di installare ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>Questo self-extract permette di installare thinkPLM 2016. </value>
+    <value>Questo file .iso permette di installare thinkPLM 2016. </value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -463,7 +463,7 @@
     <value>Benvenuto nel nuovo portale del Customer Care!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>La &lt;b&gt;release ufficiale di ThinkDesign 2016&lt;/b&gt; è stata rilasciata ed è ora disponibile nella sezione di Download.</value>
+    <value>Il &lt;b&gt;Service Pack 1 di ThinkDesign 2016&lt;/b&gt; è stato rilasciato ed è ora disponibile nella sezione di Download.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Prova gratuitamente ThinkDesign 2016! Scrivici per saperne di più.</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>Questo self-extract permette di installare l'applicazione TDViewerLight 2016.</value>
+    <value>Questo file .iso permette di installare l'applicazione TDViewerLight 2016.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, procedure di utilità e plug-in per la versione 2016.</value>
@@ -886,7 +886,7 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>Questo self-extract permette di installare l'applicazione TDViewerLight 2016 SP1.</value>
+    <value>Questo  file .iso permette di installare l'applicazione TDViewerLight 2016 SP1.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
