--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -211,7 +211,7 @@
     <value>TD 2016 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>公式版。</value>
+    <value>この自己解凍ファイルは ThinkDesign suite 2016 64bit 公式版をインストールします。</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>thinkPLM 2016 公式版。</value>
@@ -892,10 +892,10 @@
     <value>TD 2016 SP1 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bitSP1" xml:space="preserve">
-    <value>thinkPLM 2016 SP1 公式版。</value>
+    <value>ThinkDesign 2016 SP1 公式版。</value>
   </data>
   <data name="Description2016thinkPLMSP1" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 SP1 official version.</value>
+    <value>thinkPLM 2016 SP1 公式版。</value>
   </data>
   <data name="Product2016TDViewerLightSP1" xml:space="preserve">
     <value>TDViewerLight 2016 SP1</value>
@@ -910,7 +910,7 @@
     <value>thinkPLM 2016 SP1</value>
   </data>
   <data name="Download2016TDViewerLightSP1" xml:space="preserve">
-    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/CD_tdviewer_2016T1_b21116_64bit.iso</value>
+    <value>ftp://t3user:t3user2012@ftp.t3-japan.co.jp/t3software/2016.1build21116/tdviewer_2016T1_b21116_64bit.iso</value>
   </data>
   <data name="Download2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_td_2016T1_b21116.iso</value>
@@ -919,6 +919,6 @@
     <value>ftp://t3user:t3user2012@ftp.t3-japan.co.jp/t3software/2016.1build21116/dvd_td_64bit_2016T1_b21116.iso</value>
   </data>
   <data name="Download2016thinkPLMSP1" xml:space="preserve">
-    <value>http://dpt3.dptcorporate.com/T3-Case/2016_build21116/dvd_thinkplm_2016T1_b21116.iso</value>
+    <value>ftp://t3user:t3user2012@ftp.t3-japan.co.jp/t3software/2016.1build21116/dvd_thinkplm_2016T1_b21116.iso</value>
   </data>
 </root>
