--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -181,7 +181,7 @@
     <value>Welcome to the new Customer Care portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>The &lt;b&gt;official release of ThinkDesign 2016&lt;/b&gt; is now available! Have a look at the Download section.</value>
+    <value>The &lt;b&gt;Service Pack 1 of ThinkDesign 2016&lt;/b&gt; is now available! Have a look at the Download section.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Try for free ThinkDesign 2016! Write to us to know more.</value>
@@ -316,10 +316,10 @@
     <value>TD 2016 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Recommended version. Official release of ThinkDesign 2016.</value>
+    <value>This .iso file will install the official ThinkDesign suite 2016 64bit.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 official version.</value>
+    <value>This section includes thinkPLM 2016.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -598,7 +598,7 @@
     <value>ThinkDesign 2016 SP1 (x64) - 2 GB</value>
   </data>
   <data name="Description2016TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 application.</value>
+    <value>This .iso file will install the TDViewerLight 2016 application.</value>
   </data>
   <data name="Description2016Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, utilities and plug-ins for version 2016.</value>
@@ -886,7 +886,7 @@
     <value>Email correctly sent</value>
   </data>
   <data name="Description2016TDViewerLightSP1" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2016 SP1 application.</value>
+    <value>This .iso file will install the TDViewerLight 2016 SP1 application.</value>
   </data>
   <data name="Description2016ThinkDesign32bitSP1" xml:space="preserve">
     <value>TD 2016 SP1 legacy version for old systems.</value>
